--- a/back/package.json
+++ b/back/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
-  }
+   "name": "back",
+   "version": "1.0.0",
+   "description": "",
+   "main": "server.js",
+   "type": "module",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "ts-node src/index.ts",
+      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "@prisma/client": "^3.9.2",
+      "bcrypt": "^5.0.1",
+      "dotenv": "^16.0.0",
+      "express": "^4.17.2",
+      "jsonwebtoken": "^8.5.1",
+      "mysql": "^2.14.1"
+   },
+   "devDependencies": {
+      "prisma": "^3.9.2",
+      "ts-node": "3.3.0",
+      "typescript": "3.3.3333"
+   }
 }
