--- a/back/.env
+++ b/back/.env
@@ -4,3 +4,5 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=groupomania
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+JWT_SECRET = "RANDOM_WEB_TOKEN"
