--- a/back/.env
+++ b/back/.env
@@ -6,3 +6,5 @@ DB_NAME=groupomania
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 JWT_SECRET = "RANDOM_WEB_TOKEN"
+
+PORT=8080
