--- a/back/package.json
+++ b/back/package.json
@@ -6,22 +6,23 @@
    "type": "module",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/index.ts",
+      "start": "nodemon server.js",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@prisma/client": "^3.9.2",
       "bcrypt": "^5.0.1",
       "dotenv": "^16.0.0",
       "express": "^4.17.2",
       "jsonwebtoken": "^8.5.1",
-      "mysql": "^2.14.1"
+      "mysql": "^2.18.1",
+      "mysql2": "^2.3.3",
+      "nodemon": "^2.0.15",
+      "uuid": "^8.3.2"
    },
    "devDependencies": {
-      "prisma": "^3.9.2",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    }
