--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@prisma/client": "^3.9.2",
       "bcrypt": "^5.0.1",
       "dotenv": "^16.0.0",
       "express": "^4.17.2",
@@ -23,6 +24,7 @@
       "uuid": "^8.3.2"
    },
    "devDependencies": {
+      "prisma": "^3.9.2",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    }
